Finalização do EDA Descritiva

--- a/notebooks/00_eda_tratamento.ipynb
+++ b/notebooks/00_eda_tratamento.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# EDA - Tratamento dos Dados\n",
     "\n",
-    "<a href=\"../../README.md\" title=\"Voltar para a página principal\">\n",
+    "<a href=\"../README.md\" title=\"Voltar para a página principal\">\n",
     "🏠 Voltar para Home\n",
     "</a>"
    ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "7c575dd3",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "fb1f0a7e",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "42ab4afa",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "c2b2d778",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "77034b2e",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_88733/746161803.py:2: DtypeWarning: Columns (18,40,41,49) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_3359/746161803.py:2: DtypeWarning: Columns (18,40,41,49) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"../database/raw/acompanhamento_operacional.csv\")\n"
      ]
     },
@@ -411,7 +411,7 @@
        "[5 rows x 113 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "8d4f1fb3",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "f8e69fba",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "3faa0fce",
    "metadata": {},
    "outputs": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "fe352f96",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "170d2174",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "f4cced8f",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "158f3d41",
    "metadata": {},
    "outputs": [
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "6d1e73b7",
    "metadata": {},
    "outputs": [],
@@ -2839,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "5441dd17",
    "metadata": {},
    "outputs": [
@@ -2925,7 +2925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "455b1436",
    "metadata": {},
    "outputs": [
@@ -3024,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "35ec6a1c",
    "metadata": {},
    "outputs": [
@@ -3064,7 +3064,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3089,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "id": "f5c8951e",
    "metadata": {},
    "outputs": [
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "id": "a3bf109d",
    "metadata": {},
    "outputs": [],
@@ -3183,7 +3183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "b25e30d8",
    "metadata": {},
    "outputs": [
@@ -3252,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "bccb7906",
    "metadata": {},
    "outputs": [
