Finalização da Etapa EDA Descritiva -> Encerramento do notebook 01_eda_descritiva.ipynb -> Criação do arquivo eda_descritiva.md -> Iniciando Etapa EDA Inferencial e criação do arquivo 02_eda_inferencial.ipynb

--- a/notebooks/01_eda_descritiva.ipynb
+++ b/notebooks/01_eda_descritiva.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "7c575dd3",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "from IPython.display import display, HTML\n",
     "\n",
     "# Skewness e Kurtosis\n",
-    "from scipy.stats import skew, kurtosis"
+    "from scipy.stats import skew, kurtosis, zscore"
    ]
   },
   {
@@ -1877,6 +1877,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "3d8ff8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outliers_zscore</th>\n",
+       "      <th>total_registros</th>\n",
+       "      <th>porc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>qtde_ocams</th>\n",
+       "      <td>11250</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>2.3034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_conferencia</th>\n",
+       "      <td>10103</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>2.0686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qtde_itens</th>\n",
+       "      <td>9955</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>2.0383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_divisao_ocam</th>\n",
+       "      <td>9010</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.8448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_coleta</th>\n",
+       "      <td>8921</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.8266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_analise_producao</th>\n",
+       "      <td>7457</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.5268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_planejamento</th>\n",
+       "      <td>6656</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.3628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>m3</th>\n",
+       "      <td>5853</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.1984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_pre_conferencia</th>\n",
+       "      <td>5070</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>1.0381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_minuta</th>\n",
+       "      <td>3549</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.7267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_emissao</th>\n",
+       "      <td>3363</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.6886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peso</th>\n",
+       "      <td>3167</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.6484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_distribuicao_cotas</th>\n",
+       "      <td>3088</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.6323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horas_exped_minuta</th>\n",
+       "      <td>2910</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.5958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peso_cubado_rodoviario</th>\n",
+       "      <td>2213</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.4531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hora_analise_transporte</th>\n",
+       "      <td>405</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.0829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>volume</th>\n",
+       "      <td>349</td>\n",
+       "      <td>488398</td>\n",
+       "      <td>0.0715</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          outliers_zscore  total_registros    porc\n",
+       "qtde_ocams                          11250           488398  2.3034\n",
+       "horas_conferencia                   10103           488398  2.0686\n",
+       "qtde_itens                           9955           488398  2.0383\n",
+       "horas_divisao_ocam                   9010           488398  1.8448\n",
+       "horas_coleta                         8921           488398  1.8266\n",
+       "horas_analise_producao               7457           488398  1.5268\n",
+       "horas_planejamento                   6656           488398  1.3628\n",
+       "m3                                   5853           488398  1.1984\n",
+       "horas_pre_conferencia                5070           488398  1.0381\n",
+       "horas_minuta                         3549           488398  0.7267\n",
+       "horas_emissao                        3363           488398  0.6886\n",
+       "peso                                 3167           488398  0.6484\n",
+       "horas_distribuicao_cotas             3088           488398  0.6323\n",
+       "horas_exped_minuta                   2910           488398  0.5958\n",
+       "peso_cubado_rodoviario               2213           488398  0.4531\n",
+       "hora_analise_transporte               405           488398  0.0829\n",
+       "volume                                349           488398  0.0715"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Seleciona apenas variáveis numéricas\n",
+    "df_num = df_main.select_dtypes(include=['int64', 'float64'])\n",
+    "\n",
+    "# Remove colunas sem interesse direto\n",
+    "cols_remover = ['ss','fl_base','fl_atraso_zt','fl_atraso_cli','fl_sem_minuta']\n",
+    "df_num = df_num.drop(columns=cols_remover, errors='ignore')\n",
+    "\n",
+    "# Calcula z-score\n",
+    "z_scores = df_num.apply(zscore)\n",
+    "\n",
+    "# Conta valores extremos (|z| >= 3)\n",
+    "outliers_z = (z_scores.abs() >= 3).sum().sort_values(ascending=False)\n",
+    "\n",
+    "# Cria DataFrame final\n",
+    "df_zscore_outliers = pd.DataFrame({\n",
+    "    'outliers_zscore': outliers_z,\n",
+    "    'total_registros': len(df_main),\n",
+    "})\n",
+    "df_zscore_outliers['porc'] = (\n",
+    "    df_zscore_outliers['outliers_zscore'] / df_zscore_outliers['total_registros'] * 100\n",
+    ").round(4)\n",
+    "\n",
+    "df_zscore_outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "9bd2314c",
    "metadata": {},
@@ -2086,22 +2277,89 @@
    "id": "34da68a3",
    "metadata": {},
    "source": [
-    "***Nota Técnica:** As distribuições gráficas das variáveis numéricas reforçam o diagnóstico obtido nas etapas estatísticas anteriores:\n",
+    "**Nota Técnica:** A identificação de outliers tem como objetivo isolar observações que se afastam de maneira extrema do comportamento central da distribuição. No contexto operacional do OTIF, esses casos extremos não representam “erros” do dataset, mas sim **situações reais que carregam alto impacto logístico**, como pedidos volumosos, fragmentados ou que exigem processamento excepcional.\n",
     "\n",
-    "> - **Histogramas:** Mostram alta concentração de valores próximos de zero, seguidos por uma cauda longa à direita. Isso confirma que a maior parte dos pedidos é simples, mas existe um conjunto pequeno de casos altamente volumosos, muito provavelmente são pedidos solicitaçdos pelos maiores clientes da empresa como NTL, SAM e PEG.\n",
-    ">\n",
-    "> - **Boxplots:** Evidenciam grande quantidade de outliers, distribuídos muito além dos limites interquartis. Esses pontos extremos representam pedidos atípicos com elevada complexidade operacionale, não são erros de coleta, e sim casos reais que impactam o processo.\n",
+    "- **1. Outliers via IQR (Boxplot):** A análise do *Interquartile Range (IQR)* evidenciou que praticamente todas as variáveis quantitativas apresentam caudas longas à direita. Os boxplots mostraram uma grande concentração de observações próximas ao quartil inferior (Q1–Q2) e **um volume expressivo de valores que ultrapassam Q3**, formando aglomerações densas de pontos além dos limites do whisker.\n",
+    "\n",
+    "- **2. Distribuição (Histogramas):** Mostram alta concentração de valores próximos de zero, seguidos por uma cauda longa à direita. Isso confirma que a maior parte dos pedidos é simples, mas existe um conjunto pequeno de casos altamente volumosos.\n",
+    "\n",
+    ">**Interpretação:**\n",
+    ">Esses outliers representam pedidos muito maiores, mais complexos ou com tempos logísticos significativamente superiores à média — características típicas de operações críticas que elevam o risco de atraso.\n",
     "\n",
     "---\n",
     "\n",
-    "**Conclusão:**\n",
-    "As operações da Zenatur apresentam um comportamento fortemente assimétrico e leptocúrtico:\n",
+    "## **2. Outliers via Z-Score (|z| ≥ 3)**\n",
     "\n",
-    "- maioria dos pedidos pequenos e simples;\n",
-    "- minoria de pedidos extremamente grandes e complexos;\n",
-    "- esses casos extremos elevam a dispersão, deslocam as médias e influenciam diretamente em etapas críticas como OCAM, produção, separação e expedição.\n",
+    "A análise de Z-Score permitiu quantificar a proporção de observações que se desviam mais de três desvios-padrão da média. O ranking a seguir destaca as variáveis mais críticas:\n",
     "\n",
-    "Essas distribuições gráficas confirmam visualmente os achados de média, dispersão, skewness e curtose, consolidando a base para a próxima etapa do EDA: **detecção formal de outliers e análise de impacto operacional**."
+    "| Variável                   | % Outliers | Interpretação Operacional                                            |\n",
+    "| -------------------------- | ---------- | -------------------------------------------------------------------- |\n",
+    "| **qtde_ocams**             | **2.30%**  | Indica pedidos fragmentados e SKUs distribuídas em múltiplos pontos. |\n",
+    "| **horas_conferencia**      | 2.06%      | Conferência lenta, conferências extensas ou divergências frequentes. |\n",
+    "| **qtde_itens**             | 2.03%      | Pedidos volumosos; maior probabilidade de gargalo operacional.       |\n",
+    "| **horas_divisao_ocam**     | 1.84%      | Complexidade no processo de divisão e alocação de SKU.               |\n",
+    "| **horas_coleta**           | 1.83%      | Picking fragmentado, distâncias maiores ou pedidos fora do padrão.   |\n",
+    "| **horas_analise_producao** | 1.53%      | Filas ou atrasos acumulados na operação produtiva.                   |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4e2b8be",
+   "metadata": {},
+   "source": [
+    "# Conclusão estatística\n",
+    "\n",
+    "As variáveis com maior índice de outliers são exatamente aquelas relacionadas ao **volume de itens**, **fragmentação de estoque (OCAM)** e **tempos operacionais**, confirmando a presença de eventos extremos no fluxo logístico. Estes volumes expressívos podem estar ligados diretamente a relevancia do cliente como NTL, PEG, SAM, VRA e COL.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Significado operacional dos outliers\n",
+    "\n",
+    "Os outliers identificados não devem ser encarados como ruído ou erro de coleta, mas sim como **eventos críticos que ocorrem naturalmente no processo operacional**. Entre as principais causas:\n",
+    "\n",
+    "- pedidos grades com muitos itens que ocupam a linha de produção\n",
+    "- volumes e pesos acima do padrão\n",
+    "- necessidade de múltiplos OCAMs\n",
+    "- picking disperso entre galpões\n",
+    "- fila operacional em conferência, produção e expedição\n",
+    "\n",
+    "Em todos os casos, trata-se de situações que realmente **aumentam o tempo de processamento e elevam o risco de ruptura do OTIF**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Insight-chave da análise\n",
+    "\n",
+    "A análise combinada de IQR, Z-Score, skewness, curtose e medidas centrais indica que:\n",
+    "\n",
+    "> **Os maiores ofensores estatísticos são exatamente os maiores ofensores operacionais.**\n",
+    "> **Pedidos grandes, complexos e fragmentados respondem pela maior parte dos desvios que prejudicam o OTIF.**\n",
+    "\n",
+    "Essa conclusão reforça a importância de tratar os outliers não como exceções a serem removidas, mas como **elementos fundamentais para o aprendizado do modelo preditivo**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Encerramento da Etapa**\n",
+    "\n",
+    "Esta análise conclui a fase de detecção e interpretação de outliers na Estatística Descritiva.\n",
+    "Os padrões identificados serão essenciais nas próximas etapas:\n",
+    "\n",
+    "- estatística inferencial (diagnóstico das causas)\n",
+    "- análise de correlação\n",
+    "- modelagem preditiva do risco de atraso (OTIF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d1fb087",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "<div align=\"left\">\n",
+    "  <a href=\"#topo\" title=\"Voltar ao início do README\">⬆️ Topo</a>\n",
+    "</div>\n",
+    "\n",
+    "---"
    ]
   }
  ],
