--- a/notebooks/02_eda_inferencial.ipynb
+++ b/notebooks/02_eda_inferencial.ipynb
@@ -2,18 +2,341 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ddc83074",
+   "id": "46d20b5c",
    "metadata": {},
    "source": [
-    "<a href=\"../../README.md\" title=\"Voltar para a página principal\">\n",
+    "# EDA – Estatística Inferencial & Feature Engineering Inicial\n",
+    "\n",
+    "<a href=\"../README.md\" title=\"Voltar para a página principal\">\n",
     "🏠 Voltar para Home\n",
     "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "652ad2db",
+   "metadata": {},
+   "source": [
+    "## Visão Geral\n",
+    "\n",
+    "A **Estatística Inferencial** tem como objetivo **investigar relações, padrões e diferenças estatisticamente significativas** dentro do dataset.\n",
+    "Enquanto a Estatística Descritiva respondeu *“o que aconteceu?”*, agora buscamos responder *“por que aconteceu?”* — isto é, compreender **associações, dependências e fatores que influenciam diretamente o comportamento do TARGET (OTIF / atraso)**.\n",
+    "\n",
+    "Nesta etapa, aprofundamos a análise utilizando ferramentas que permitem:\n",
+    "\n",
+    "- avaliar correlações lineares e não lineares entre variáveis numéricas (*Pearson* e *Spearman*);\n",
+    "- comparar grupos e testar diferenças significativas (*ANOVA*);\n",
+    "- verificar dependência entre variáveis categóricas (*qui-quadrado*);\n",
+    "- explorar a **separabilidade** entre pedidos no prazo e pedidos atrasados;\n",
+    "- identificar variáveis-chave que servem como **candidatas fortes para Feature Engineering**.\n",
+    "\n",
+    "A Inferência Estatística opera como um elo entre a EDA descritiva e a fase de modelagem, fornecendo evidências quantitativas sobre **quais variáveis realmente importam**, quais são redundantes e onde existe potencial para criação de novas features.\n",
+    "\n",
+    "### Tópicos abordados nesta etapa\n",
+    "\n",
+    "- correlação entre variáveis numéricas\n",
+    "- análise de dependência entre categorias\n",
+    "- testes estatísticos para diferenças entre grupos\n",
+    "- investigação da força e direção das relações\n",
+    "- primeiros insights para criação de novas features (FE inicial)\n",
+    "\n",
+    "Essas análises compõem a fundação que guiará a etapa seguinte — **Preparação Avançada dos Dados & Feature Engineering Completo** — além de orientar quais modelos tendem a performar melhor na predição de atraso (OTIF)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77144cc9",
+   "metadata": {},
+   "source": [
+    "# Importações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "94d4118d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manipulação de arquivos e diretórios\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Dowload Kagglehub\n",
+    "# import kagglehub\n",
+    "\n",
+    "# Estatisticas e DataFrames\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Gráficos\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Trabalho com html\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "# Skewness e Kurtosis\n",
+    "from scipy.stats import skew, kurtosis, zscore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "557c1116",
+   "metadata": {},
+   "source": [
+    "# 1. Carregamento e Visualização Preliminar\n",
+    "\n",
+    "***Descrição:*** Utilizando o dataset de acompanhamento operacional dos pedidos tratados.\n",
+    "> **Arquivo e:** database/processed/acompanhamento_operacional_clean.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fdcac4a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sigla_cliente</th>\n",
+       "      <th>ss</th>\n",
+       "      <th>tipo_veiculo</th>\n",
+       "      <th>qtde_itens</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>peso</th>\n",
+       "      <th>m3</th>\n",
+       "      <th>uf</th>\n",
+       "      <th>fl_base</th>\n",
+       "      <th>representante</th>\n",
+       "      <th>...</th>\n",
+       "      <th>horas_planejamento</th>\n",
+       "      <th>horas_divisao_ocam</th>\n",
+       "      <th>horas_coleta</th>\n",
+       "      <th>horas_conferencia</th>\n",
+       "      <th>horas_emissao</th>\n",
+       "      <th>horas_analise_producao</th>\n",
+       "      <th>horas_minuta</th>\n",
+       "      <th>horas_exped_minuta</th>\n",
+       "      <th>hora_analise_transporte</th>\n",
+       "      <th>analise_transporte</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>3560316</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>144.30</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NÃO DEFINIDO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>Fora do Prazo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>3561720</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130.30</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NÃO DEFINIDO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>Fora do Prazo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>3562246</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.00</td>\n",
+       "      <td>2.22</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC CARGO TRANSPORTES LTDA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Fora do Prazo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>3565015</td>\n",
+       "      <td>TRUCK 75 M3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>182.79</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>VELOMAX BRASIL TRANSPORTES LTD</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>Fora do Prazo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>3565022</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25.50</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MFM TRANSPORTES</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>Fora do Prazo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sigla_cliente       ss tipo_veiculo  qtde_itens  volume    peso    m3  uf  \\\n",
+       "0           NTL  3560316  TRUCK 70 M3           1       1  144.30  2.10  MS   \n",
+       "1           NTL  3561720  TRUCK 70 M3           1       1  130.30  2.33  MS   \n",
+       "2           NTL  3562246  TRUCK 70 M3           1       1   97.00  2.22  SC   \n",
+       "3           MMM  3565015  TRUCK 75 M3           7      43  182.79  1.08  CE   \n",
+       "4           MMM  3565022  TRUCK 70 M3           4       9   25.50  0.07  CE   \n",
+       "\n",
+       "   fl_base                   representante  ... horas_planejamento  \\\n",
+       "0        0                    NÃO DEFINIDO  ...                3.0   \n",
+       "1        0                    NÃO DEFINIDO  ...                3.0   \n",
+       "2        0       SC CARGO TRANSPORTES LTDA  ...                3.0   \n",
+       "3        0  VELOMAX BRASIL TRANSPORTES LTD  ...                2.0   \n",
+       "4        0                 MFM TRANSPORTES  ...                2.0   \n",
+       "\n",
+       "  horas_divisao_ocam horas_coleta  horas_conferencia  horas_emissao  \\\n",
+       "0               20.0          6.0                0.0            0.0   \n",
+       "1               20.0          7.0                0.0            0.0   \n",
+       "2              187.0          2.0                0.0            0.0   \n",
+       "3               46.0          4.0                1.0            0.0   \n",
+       "4               46.0          6.0                1.0            0.0   \n",
+       "\n",
+       "   horas_analise_producao horas_minuta  horas_exped_minuta  \\\n",
+       "0                    22.0          0.0                16.0   \n",
+       "1                    22.0          0.0                16.0   \n",
+       "2                     0.0          0.0                16.0   \n",
+       "3                    11.0         99.0                 8.0   \n",
+       "4                    12.0        172.0                16.0   \n",
+       "\n",
+       "  hora_analise_transporte  analise_transporte  \n",
+       "0                   161.0       Fora do Prazo  \n",
+       "1                   165.0       Fora do Prazo  \n",
+       "2                    40.0       Fora do Prazo  \n",
+       "3                    93.0       Fora do Prazo  \n",
+       "4                   285.0       Fora do Prazo  \n",
+       "\n",
+       "[5 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = \"../database/processed/acompanhamento_operacional_clean.csv\"\n",
+    "\n",
+    "df_main = pd.read_csv(file_path)\n",
+    "\n",
+    "df_main.head(5)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ds_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
